# qrag

./: .gitattributes  .gitignore  CLAUDE.md  DEVELOPMENT.md  MEMORY.md  README.md  Taskfile.yml  pyproject.toml  setup.py
.github/workflows/: bundle-model.yml  ci.yml  publish.yml
docs/: ARCHITECTURE.md  BACKLOG.md  HANDOFF.md  ISSUES.md  PRD.md  QUICKRAG_TI_DESIGN.md  claude-exec.py  progress.txt  quickstart.md  ralph-once.sh
issues/: 001-scaffold-search-code-e2e.md  002-prepare-sdk-tree-sitter.md  003-prepare-docs-pdf-html.md  004-database-distribution-github.md  005-mcp-server-install.md  006-polish-tests-docs.md  007-publish-pypi-npm.md  008-gpu-embedding-multicore-chunking.md  009-incremental-database-update.md  010-watch-folder-live-update.md  011-multi-model-embedding.md  INDEX.md
npm/: README.md  index.js  package.json
scripts/: download_model.py
src/qrag/: SKILL_qrag.md  chunker.py  cli.py  config.py  database.py  doc_parser.py  embedder.py  explore.py  github_distribution.py  mcp_server.py  tui.py  zip_distribution.py
src/quickrag_ti/: chunker.py  cli.py  config.py  database.py  doc_parser.py  embedder.py  github_distribution.py  mcp_server.py
src/quickrag_ti.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/raghub/: chunker.py  cli.py  config.py  database.py  doc_parser.py  embedder.py  mcp_server.py
tests/: conftest.py  test_chunker.py  test_database.py  test_explore.py  test_integration.py  test_mcp_server.py  test_remotes.py  test_treeview.py  test_tui.py
tests/fixtures/: sample.c  sample_trm.html
tools/: AFK.md  afk.py
