[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qrag"
version = "0.2.0"
description = "Build semantic RAG databases from your code and docs — once per team, instant for every AI agent"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "sqlite-vec>=0.1.6",
    "sentence-transformers>=3.0",
]

[project.optional-dependencies]
build = [
    "tree-sitter>=0.22",
    "tree-sitter-language-pack>=0.7.2,<1.0.0",
    "pymupdf>=1.24",
    "html2text>=2024.2",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
]
build-gpu = [
    "torch>=2.0",
]
full = [
    "qrag[build,build-gpu]",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
qrag = "qrag.cli:main"
qrag-mcp-server = "qrag.mcp_server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qrag = ["models/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real sentence-transformers embeddings (slow)",
]
