[build-system]
requires = ["setuptools", "huggingface_hub>=0.20"]
build-backend = "setuptools.build_meta"

[project]
name = "qrag"
version = "0.2.0"
description = "Build semantic RAG databases from your code and docs — once per team, instant for every AI agent"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "sqlite-vec>=0.1.6",
    "tokenizers>=0.15",
    "huggingface_hub>=0.20",
    "truststore>=0.9",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.19,<2.0",
]
gpu = [
    "onnxruntime-gpu[cuda,cudnn]>=1.21,<1.27",
]
build = [
    "tree-sitter>=0.22",
    "tree-sitter-language-pack>=0.7.2,<1.0.0",
    "pymupdf>=1.24",
    "html2text>=2024.2",
    "beautifulsoup4>=4.12",
    "rich>=13.0",
]
full = [
    "qrag[build]",
    "qrag[gpu]",
]
dev = [
    "qrag[cpu]",
    "pytest>=8",
    "pytest-cov>=5",
    "rich>=13.0",
]

[project.scripts]
qrag = "qrag.cli:main"
qrag-mcp-server = "qrag.mcp_server:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
qrag = ["models/**/*", "SKILL_qrag.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that require real embeddings (slow)",
]
